--- a/src/main/resources/synthea.properties
+++ b/src/main/resources/synthea.properties
@@ -18,9 +18,9 @@ exporter.hospital.fhir_dstu2.export = false
 exporter.practitioner.fhir.export = true
 exporter.practitioner.fhir_r4.export = false
 exporter.practitioner.fhir_dstu2.export = false
-exporter.csv.export = false
+exporter.csv.export = true
 exporter.cdw.export = false
-exporter.text.export = false
+exporter.text.export = true
 exporter.text.per_encounter_export = false
 exporter.cost_access_outcomes_report = false
 exporter.prevalence_report = false
@@ -49,8 +49,8 @@ generate.database_type = none
 # none = no database, limits certain features but increases throughput
 
 # default demographics is every city in the US
-generate.demographics.default_file = geography/demographics.csv
-generate.geography.zipcodes.default_file = geography/zipcodes.csv
+generate.demographics.default_file = geography/cambridge.csv
+generate.geography.zipcodes.default_file = geography/postcode.csv
 generate.geography.country_code = US
 generate.geography.timezones.default_file = geography/timezones.csv
 
@@ -122,16 +122,16 @@ generate.costs.default_encounter_cost = 125.00
 generate.costs.default_immunization_cost = 136.00
 
 # Providers
-generate.providers.hospitals.default_file = providers/hospitals.csv
-generate.providers.longterm.default_file = providers/longterm.csv
-generate.providers.nursing.default_file = providers/nursing.csv
-generate.providers.rehab.default_file = providers/rehab.csv
-generate.providers.hospice.default_file = providers/hospice.csv
-generate.providers.dialysis.default_file = providers/dialysis.csv
-generate.providers.homehealth.default_file = providers/home_health_agencies.csv
-generate.providers.veterans.default_file = providers/va_facilities.csv
-generate.providers.urgentcare.default_file = providers/urgent_care_facilities.csv
-generate.providers.primarycare.default_file = providers/primary_care_facilities.csv
+generate.providers.hospitals.default_file = providers/cambridge-hospital.csv
+generate.providers.longterm.default_file = providers/cambridge-hospital.csv
+generate.providers.nursing.default_file = providers/cambridge-hospital.csv
+generate.providers.rehab.default_file = providers/cambridge-hospital.csv
+generate.providers.hospice.default_file = providers/cambridge-hospital.csv
+generate.providers.dialysis.default_file = providers/cambridge-hospital.csv
+generate.providers.homehealth.default_file = providers/cambridge-hospital.csv
+generate.providers.veterans.default_file = providers/cambridge-hospital.csv
+generate.providers.urgentcare.default_file = providers/cambridge-hospital.csv
+generate.providers.primarycare.default_file = providers/cambridge-hospital.csv
 
 # Quit Smoking
 lifecycle.quit_smoking.baseline = 0.01
